# marble_guidance

./: CMakeLists.txt  README.md  package.xml  path_config.rviz
include/marble_guidance/: backup_detector.h  husky_safety.h  motion_command_filter.h  path_follower.h  trajectory_follower.h  trajectory_generator.h
include/spline/: BSpline.h
launch/: backup_detector.launch  path_follower.launch  tf2odom.launch
launch/common/: backup_detector.launch  guidance.launch  husky_safety.launch  motion_command_filter.launch  path_follower.launch  trajectory_follower.launch  trajectory_generator.launch
launch/robots/: Husky_guidance.launch  Spot_guidance.launch  USpot_guidance.launch  husky_guidance.launch  husky_guidance_scanplan.launch  spot_guidance.launch  spot_guidance_msfm3d.launch  spot_guidance_scanplan.launch
launch/unreal_sim/: motion_command_filter.launch  path_follower.launch  trajectory_follower.launch
msg/: BackupStatus.msg  BeaconDetect.msg  HuskySafety.msg  MotionCmd.msg
src/: .motion_command_filter.cpp.swp  backup_detector.cpp  backup_detector_node.cpp  guidance_node.py  husky_safety.cpp  husky_safety_node.cpp  motion_command_filter.cpp  motion_command_filter_node.cpp  path_follower.cpp  path_follower_node.cpp  tf2odom.cpp  trajectory_follower.cpp  trajectory_follower_node.cpp  trajectory_generator.cpp  trajectory_generator_node.cpp
src/spline/: BSpline.cpp  Bezier.cpp  Curve.cpp  Vector.cpp
